fix(portfolio): update primary and secondary text colors for improved contrast

--- a/static/styles/portfolio.css
+++ b/static/styles/portfolio.css
@@ -10,8 +10,8 @@
     /* variables */
     --color-box-bg: oklch(1 0 0/ 0.05);
     --color-page-bg: oklch(0 0 0);
-    --color-text-primary: oklch(0.7252 0 0);
-    --color-text-secundary: oklch(0.5 0 0);
+    --color-text-primary: oklch(0.85 0 0);
+    --color-text-secundary: oklch(0.65 0 0);
     --color-text-important: oklch(1 0 0);
     --space-xs: 4px;
     --space-sm: 8px;
